# akin

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  akinator.py  docker-compose.yml  main.py  package.json  pyproject.toml
.github/workflows/: autofix.yml  test.yml
engine/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  engine.py  exceptions.py  pyproject.toml  ruff.toml  server.py
poc/: main.py
tui/: README.md  app.py  app.tcss  client.py  main.py  pyproject.toml  widgets.py
tui/akin_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
