[tool.poetry]
name = "akin"
version = "0.1.0"
description = "Akinator TUI client"
authors = []
packages = [
    { include = "engine" },
    { include = "tui" },
]

[tool.poetry.dependencies]
python = "^3.11"
akinator = "*"
readchar = "*"
cloudscraper = "*"
textual = "*"

[tool.poetry.scripts]
akin = "tui.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
