[project]
name = "akin-tui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual",
    "httpx",
    "readchar",
]

[project.scripts]
akin = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "app", "client", "widgets"]
